docs: add workingtimes swagger
