# priv/static/swagger.json
@@ -2,6 +2,194 @@
   "basePath": "/api",
   "swagger": "2.0",
   "paths": {
+    "/workingtimes/{user_id}/{id}": {
+      "get": {
+        "tags": [
+          "Workingtime"
+        ],
+        "summary": "",
+        "responses": {
+          "404": {
+            "description": "Workingtime not found"
+          },
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Workingtime"
+            },
+            "description": "Workingtime"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "user_id",
+            "in": "path",
+            "description": "Unique identifier for the user"
+          },
+          {
+            "type": "string",
+            "required": true,
+            "name": "id",
+            "in": "path",
+            "description": "Unique identifier for the workingtime"
+          }
+        ],
+        "operationId": "TimeManagerWeb.WorkingtimeController.show",
+        "description": "Show a single workingtime"
+      }
+    },
+    "/workingtimes/{user_id}": {
+      "post": {
+        "tags": [
+          "Workingtime"
+        ],
+        "summary": "",
+        "responses": {
+          "422": {
+            "description": "Unprocessable entity"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "201": {
+            "schema": {
+              "$ref": "#/definitions/Workingtime"
+            },
+            "description": "Successfuly created workingtime"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "user_id",
+            "in": "path",
+            "description": "Unique identifier for the user"
+          },
+          {
+            "schema": {
+              "$ref": "#/definitions/WorkingtimeAttributes"
+            },
+            "required": true,
+            "name": "workingtime",
+            "in": "body",
+            "description": "Workingtime attributes"
+          }
+        ],
+        "operationId": "TimeManagerWeb.WorkingtimeController.create",
+        "description": "Create a new workingtime for a user"
+      },
+      "get": {
+        "tags": [
+          "Workingtime"
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Workingtimes"
+            },
+            "description": "List of user workingtimes"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "user_id",
+            "in": "path",
+            "description": "Unique identifier for the user"
+          },
+          {
+            "type": "datetime",
+            "required": false,
+            "name": "start",
+            "in": "query",
+            "description": "The start time of the working time"
+          },
+          {
+            "type": "datetime",
+            "required": false,
+            "name": "end_time",
+            "in": "query",
+            "description": "The end time of the working time (field: 'end')"
+          }
+        ],
+        "operationId": "TimeManagerWeb.WorkingtimeController.index",
+        "description": "List all user workingtimes"
+      }
+    },
+    "/workingtimes/{id}": {
+      "put": {
+        "tags": [
+          "Workingtime"
+        ],
+        "summary": "",
+        "responses": {
+          "422": {
+            "description": "Unprocessable entity"
+          },
+          "404": {
+            "description": "Workingtime not found"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Workingtime"
+            },
+            "description": "Updated workingtime"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "id",
+            "in": "path",
+            "description": "Unique identifier for the workingtime"
+          },
+          {
+            "schema": {
+              "$ref": "#/definitions/WorkingtimeAttributes"
+            },
+            "required": true,
+            "name": "workingtime",
+            "in": "body",
+            "description": "Workingtime attributes"
+          }
+        ],
+        "operationId": "TimeManagerWeb.WorkingtimeController.update",
+        "description": "Update workingtime"
+      },
+      "delete": {
+        "tags": [
+          "Workingtime"
+        ],
+        "summary": "",
+        "responses": {
+          "404": {
+            "description": "Workingtime not found"
+          },
+          "200": {
+            "description": "Successfully deleted"
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": true,
+            "name": "id",
+            "in": "path",
+            "description": "Unique identifier for the workingtime"
+          }
+        ],
+        "operationId": "TimeManagerWeb.WorkingtimeController.delete",
+        "description": "Delete workingtime"
+      }
+    },
     "/users/{id}": {
       "put": {
         "tags": [
@@ -239,6 +427,86 @@
     }
   },
   "definitions": {
+    "Workingtimes": {
+      "type": "array",
+      "title": "Workingtimes",
+      "items": {
+        "$ref": "#/definitions/Workingtime"
+      },
+      "description": "A collection of Workingtimes"
+    },
+    "WorkingtimeAttributes": {
+      "type": "object",
+      "title": "WorkingtimeAttributes",
+      "required": [
+        "end_time",
+        "start"
+      ],
+      "properties": {
+        "start": {
+          "type": "datetime",
+          "description": "The start time of the working time"
+        },
+        "end_time": {
+          "type": "datetime",
+          "description": "The end time of the working time"
+        }
+      },
+      "example": {
+        "workingtime": {
+          "start": "2024-10-08 08:00:00",
+          "end": "2024-10-08 17:00:00"
+        }
+      },
+      "description": "Attributes for creating or updating a workingtime"
+    },
+    "Workingtime": {
+      "type": "object",
+      "title": "Workingtime",
+      "required": [
+        "user",
+        "end_time",
+        "start",
+        "id"
+      ],
+      "properties": {
+        "user": {
+          "type": "User",
+          "description": "The user creating this working time"
+        },
+        "start": {
+          "type": "datetime",
+          "description": "The start time of the working time"
+        },
+        "id": {
+          "type": "number",
+          "description": "Unique identifier for the user"
+        },
+        "end_time": {
+          "type": "datetime",
+          "description": "The end time of the working time (field: 'end')"
+        }
+      },
+      "example": {
+        "user": {
+          "username": "john_doe",
+          "id": 1,
+          "email": "john.doe@email.com"
+        },
+        "start": "2024-10-08 08:00:00",
+        "id": 1,
+        "end": "2024-10-08 17:00:00"
+      },
+      "description": "A user's working time"
+    },
+    "Clocks": {
+      "type": "array",
+      "title": "Clocks",
+      "items": {
+        "$ref": "#/definitions/Clock"
+      },
+      "description": "A collection of Clocks"
+    },
     "ClockAttributes": {
       "type": "object",
       "title": "ClockAttributes",
@@ -263,31 +531,6 @@
         }
       },
       "description": "Attributes for creating a clock"
-    },
-    "UserAttributes": {
-      "type": "object",
-      "title": "UserAttributes",
-      "required": [
-        "username",
-        "email"
-      ],
-      "properties": {
-        "username": {
-          "type": "string",
-          "description": "The user's username"
-        },
-        "email": {
-          "type": "string",
-          "description": "The user's email address"
-        }
-      },
-      "example": {
-        "user": {
-          "username": "john_doe",
-          "email": "john.doe@email.com"
-        }
-      },
-      "description": "Attributes for creating or updating a user"
     },
     "Clock": {
       "type": "object",
@@ -328,13 +571,38 @@
       },
       "description": "Timestamp of clock in or out for a user"
     },
-    "Clocks": {
+    "Users": {
       "type": "array",
-      "title": "Clocks",
+      "title": "Users",
       "items": {
-        "$ref": "#/definitions/Clock"
+        "$ref": "#/definitions/User"
       },
-      "description": "A collection of Clocks"
+      "description": "A collection of Users"
+    },
+    "UserAttributes": {
+      "type": "object",
+      "title": "UserAttributes",
+      "required": [
+        "username",
+        "email"
+      ],
+      "properties": {
+        "username": {
+          "type": "string",
+          "description": "The user's username"
+        },
+        "email": {
+          "type": "string",
+          "description": "The user's email address"
+        }
+      },
+      "example": {
+        "user": {
+          "username": "john_doe",
+          "email": "john.doe@email.com"
+        }
+      },
+      "description": "Attributes for creating or updating a user"
     },
     "User": {
       "type": "object",
@@ -364,14 +632,6 @@
         "email": "joe@mail.com"
       },
       "description": "A user of the application"
-    },
-    "Users": {
-      "type": "array",
-      "title": "Users",
-      "items": {
-        "$ref": "#/definitions/User"
-      },
-      "description": "A collection of Users"
     }
   },
   "host": "localhost:4000",
